# data-journalism-python

./: .gitignore  fetch_datasets.py  pyproject.toml
book/: _config.yml  _toc.yml
book/python_basics/: 01-python-basics.ipynb  02-data-basics.ipynb  03-aggregates1.ipynb  04-aggregates2.ipynb  05-filters.ipynb  06-mutating.ipynb  07-workingwithdates.ipynb  08-datacleaning1.ipynb  09-datacleaning2.ipynb  10-datacleaning3.ipynb  11-joins.ipynb  12-spreadsheets.ipynb  13-census.ipynb  14-bars.ipynb  15-stacked-bars.ipynb  16-waffles.ipynb  17-line-charts.ipynb  18-slope-charts.ipynb  19-dumbbells.ipynb  20-scatter-plots.ipynb  21-bubbles.ipynb  22-beeswarm-plots.ipynb  23-tables.ipynb  24-annotations.ipynb  25-color.ipynb  26-finishing-touches.ipynb  27-datawrapper-for-charts.ipynb  28-datawrapper-for-maps.ipynb
